--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -4,7 +4,7 @@
     </div>
     <div class="col">
       <%= link_to "Edit Profile", edit_user_registration_path, class: "btn btn-outline-secondary" %>
-      <%= link_to "Add New Product", new_product_path, class: "btn btn-outline-primary" %>
+      <%= link_to "New Product", new_product_path, class: "btn btn-outline-primary" %>
     </div>
   </div>
 
