--- a/app/views/transactions/index.html.erb
+++ b/app/views/transactions/index.html.erb
@@ -4,7 +4,7 @@
   </div>
   <div class="col">
     <%= link_to "Back to Products", products_path, class: "btn btn-outline-dark" %>
-    <%= link_to "Add New Transaction", new_product_transaction_path(params: { product_id: @product.id }), method: :get, class: "btn btn-outline-primary" %>
+    <%= link_to "New Transaction", new_product_transaction_path(params: { product_id: @product.id }), method: :get, class: "btn btn-outline-primary" %>
   </div>
 </div><br>
 
