--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -27,7 +27,7 @@
       </div><br>
 
       <div class="form-group">
-        <%= form.submit  class: "btn btn-primary" %>
+        <%= form.submit  class: "btn btn-success" %>
       </div>
     <% end %>
   </div>
