--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,7 +1,7 @@
 <h1><%= @product.item_name %></h1>
 
 <div>
-  <%= button_to "Transaction", product_transactions_path(@product), method: :get, class: "btn btn-outline-primary" %>
+  <%= button_to "Transactions", product_transactions_path(@product), method: :get, class: "btn btn-outline-primary" %>
 </div>
 
 <div class="table-responsive">
