--- a/app/views/transactions/_form.html.erb
+++ b/app/views/transactions/_form.html.erb
@@ -1,20 +1,19 @@
-<%= form_with(model: transaction, url: product_transactions_path(@product), local: true) do |form| %>  
-
-<h2><%= @product.item_name %> Transactions: </h2>
+<%= form_with(model: transaction, url: product_transactions_path(@product), local: true) do |form| %>
+  <h2><%= @product.item_name %> Transactions:</h2>
 
   <div class="form-group">
     <%= form.label :brand %>
-    <%= form.select :brand, options_for_select(@product_names_brands), class: "form-select" %>
+    <%= form.text_field :brand, class: "form-control" %>
   </div>
 
   <div class="form-group">
     <%= form.label :transaction_type %>
-    <%= form.select :transaction_type, [['Buy', 'buy'], ['Sell', 'sell']], class: "form-select" %>
+    <%= form.select :transaction_type, [['Buy', 'buy'], ['Sell', 'sell']], class: "form-control" %>
   </div>
 
   <div class="form-group">
     <%= form.label :description %>
-    <%= form.select :description, options_for_select(@product_names_description), class: "form-select" %>
+    <%= form.select :description, options_for_select(@product_names_description), class: "form-control" %>
   </div>
 
   <div class="form-group">
@@ -27,7 +26,7 @@
     <%= form.number_field :price, class: "form-control" %>
   </div>
 
-<%= form.hidden_field :product_id, value: @product.id %>
+  <%= form.hidden_field :product_id, value: @product.id %>
   
   <div class="form-group">
     <%= form.submit class: "btn btn-success" %>
